@@ -1122,6 +1122,7 @@ through here.<br>
 the room.<br>
 "Prop_HereAdjuster" affecst the occupants stats when in the room.<br>
 "Prop_HereSpellCast" affect the occupants with spells when in the room.<br>
+"Prop_IceBox" Keeps food from spoiling.<br>
 "Prop_ItemTransporter" drop it, and its gone -- elsewhere.<br>
 "Prop_ItemReceiver" is the elsewhere.<br>
 "Prop_LotsForSale" puts this room up for sale, and ensures that you
@@ -3177,6 +3178,7 @@ Here are some important effects you may consider for your items:</p>
 "Prop_HaveSpellCast" gives a spell effect to the owner.<br>
 "Prop_HaveZapper" restricts ownership.<br>
 "Prop_Hidden" makes an item hidden, temporarily.<br>
+"Prop_IceBox" makes a container that keeps food from spoiling.<br>
 "Prop_Invisibility" makes an item invisible.<br>
 "Prop_ItemNoRuin" makes the item immune to your loot corruption policy.<br>
 "Prop_ItemTransporter" makes an item that transports things.<br>
