@@ -553,6 +553,15 @@ elapse before the property reengages and makes the mob hidden again. \n\r\
 Optional flags include: \n\r\
 Unlocatable - makes the item unlocatable by spells, or an area unrecommended by the WHERE command.
 
+PROP_ICEBOX=\
+Property   : Prop_IceBox\n\r\
+Targets    : Items,Rooms\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Any items places in the room or container with this property will not spoil.  When removed, however,\
+spoilage will resume.
+
 PROP_INVISIBILITY=\
 Property   : Prop_Invisibility\n\r\
 Targets    : MOB\n\r\
