@@ -9,6 +9,7 @@
 % Wand	12	30	1	3	GenWand			
 % Wok	3	30	3	7	GenContainer		25	
 % Hooded Lantern	6	50	10	150	GenLantern			
+% Ice Box	30	60	50	300	GenContainer		250	*Prop_IceBox;
 % Lantern	6	40	7	100	GenLantern			
 % Bowl	1	20	1	1	GenDrink		5	
 % Statue	12	120	450	100	GenItem	STATUE		
