@@ -2221,3 +2221,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 23.CharClasses now support max/caps in common skills, crafting skills, non-crafting common skills, and languages.
 24.Injury text is a bit more decorated now. (Thanks gmdenna!)
 25.Many many more mxp images scrounged up, and several old ones replaces with better ones.  There is a light at the end of the tunnel!
+# Build ? Release ?
+1. New Property: Prop_IceBox (thx Robert!)
